# pytest_result_sender

./: .gitignore  README.md  pyproject.toml
src/pytest_result_sender/: plugin.py
