[tool.pdm]

[project]
name = "pytest_result-sender"
version = "0.1.0"
description = ""
authors = [
    {name = "George_you", email = "george_you@qq.com"},
]
dependencies = [
    "pytest>=7.3.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.pytest11]
result_log =  "pytest_result_sender.plugin"

[tool.pdm.build]
package-dir = "src"
